# shogi-board-app

./: .gitignore  package-lock.json  package.json  vercel.json
frontend/: .env.local.example  .gitignore  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vercel.json  vite-ocr-api-plugin.ts  vite.config.ts
frontend/api/: ocr-shogi.ts
frontend/lib/ocr/: boardOcrTypes.ts  geminiBoardOcr.ts
frontend/scripts/: vercel-install.sh
frontend/src/: App.css  App.tsx  main.tsx  shogicore.d.ts
frontend/src/components/: BoardOcrDialog.css  BoardOcrDialog.tsx  CapturedPieces.css  CapturedPieces.tsx  ErrorBoundary.tsx  ShogiBoard.css  ShogiBoard.tsx
frontend/src/types/: global.d.ts
frontend/src/utils/: applyRecognizedPosition.ts  boardOcrService.ts  boardOcrTypes.ts  geminiBoardOcr.ts
shogi-core/: .gitignore  Cargo.toml  package.json
shogi-core/pkg/: package.json  shogi_core.d.ts  shogi_core.js  shogi_core_bg.js  shogi_core_bg.wasm  shogi_core_bg.wasm.d.ts
shogi-core/src/: lib.rs
triad/: README.md  setup.sh  triad.sh
